Upgrade Java 11 > 21, Springboot 2.7 > 3.3, Gradle 7.2 > 8.5